[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "be-rcon"
version = "2.12.5"
description = "Unofficial Python client for the BattlEye RCon protocol over UDP."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Bushy", email = "contact@bushy.dev" }]
keywords = ["dayz", "arma", "battleye", "rcon"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: System :: Networking",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.urls]
Homepage = "https://github.com/bearmeister/be-rcon"
Issues = "https://github.com/bearmeister/be-rcon/issues"

[project.scripts]
be-rcon = "be_rcon:main"

[tool.setuptools]
py-modules = ["be_rcon"]
